--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  text-align:justify;
   padding: 2rem;
 }
 
