--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
 }
 
 body {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  color: #333;
+  background-color: #f8f9fa;
   background-image: url('img/subtle-white-feathers.png');
   background-size: repeat; /* o "repeat" si es una textura repetitiva */
   background-attachment: fixed;
@@ -31,6 +33,7 @@ body {
   font-weight: bold;
   margin-left: 1rem;
   transition: color 0.3s;
+  font-family: 'Edu SA Hand', cursive;
 }
 
 .navbar-nav .nav-link:hover {
@@ -40,6 +43,7 @@ body {
 section h2 {
   color: var(--azul);
   margin-bottom: 1rem;
+  font-family: 'Playpen Sans', cursive;
 }
 
 .whatsapp-button {
@@ -102,6 +106,7 @@ footer {
   align-items: center;
   text-align:justify;
   padding: 2rem;
+   font-family: 'Edu SA Hand', cursive;
 }
 
 /* Asegúrate de que las secciones no se vean demasiado anchas */
@@ -113,6 +118,7 @@ footer {
   height: 100vh;
   overflow: hidden;
   position: relative;
+  font-family: 'Edu SA Hand', cursive;
 }
 
 .hero-video {
